:boom: Modularizing project